# fastmoe

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
experiments/: double_way_micro_batching.py  lancet.py
src/fastmoe/: __init__.py  config.py  consts.py  distributed.py  simulate.py  streams.py
src/fastmoe/benchmarks/: __init__.py  benchmark_dist.py  run_on_cloud.py
src/fastmoe/comm/: __init__.py  streams.py
src/fastmoe/kernels/: ops.py
src/fastmoe/layers/: moe.py  pipeline.py  pipelined_block.py
src/fastmoe/models/: tiny_model.py
tests/: mocks.py  test_cpu_moe.py
